<?xml version="1.0"?>
<package format="2">
  <name>futaba_rs_controller</name>
  <version>1.0.0</version>
  <description>The futaba_rs_controller package</description>

  <maintainer email="hirokazu@dream-drive.net">hirokazu</maintainer>
  <license>Apache 2.0</license>

  <url type="repository">https://github.com/dreamdrive/futaba_rs</url>
  <url type="bugtracker">https://github.com/dreamdrive/futaba_rs/issues</url>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>yaml-cpp</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
